[gd_scene load_steps=16 format=3 uid="uid://ctyybayseolrk"]

[ext_resource type="Script" path="res://play_area/open_pack.gd" id="1_hw4gq"]
[ext_resource type="Texture2D" uid="uid://bislmnwkbmc2n" path="res://textures/playingCardBacks.png" id="2_gniyf"]
[ext_resource type="PackedScene" uid="uid://dqomndebwjgmn" path="res://cards/card.tscn" id="3_407ca"]
[ext_resource type="Script" path="res://recipes/recipe_holder.gd" id="4_aetsk"]
[ext_resource type="Resource" uid="uid://uuh8uspts84f" path="res://recipes/data/egg_recipe.tres" id="5_7mihu"]
[ext_resource type="Texture2D" uid="uid://cxstaym8g0up8" path="res://play_area/simple_right.png" id="6_ywjk5"]
[ext_resource type="Script" path="res://play_area/move_selected_cards.gd" id="7_l5e3b"]
[ext_resource type="Script" path="res://play_area/route_recipe_components.gd" id="8_psfef"]
[ext_resource type="Script" path="res://play_area/check_recipe.gd" id="9_kghtm"]
[ext_resource type="Script" path="res://play_area/tutorial_1.gd" id="10_oi6r8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3s05t"]
atlas = ExtResource("2_gniyf")
region = Rect2(0, 0, 140, 190)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8dcmi"]
load_path = "res://.godot/imported/playingCards.png-1f9d546769ce16ee91a682d53fbc21f4.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_e3ipw"]
atlas = SubResource("CompressedTexture2D_8dcmi")
region = Rect2(420, 1710, 140, 190)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_g0s0h"]
load_path = "res://.godot/imported/playingCards.png-1f9d546769ce16ee91a682d53fbc21f4.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_8ieng"]
atlas = SubResource("CompressedTexture2D_g0s0h")
region = Rect2(0, 570, 140, 190)

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MainLayout" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -360.0
offset_right = 540.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopMenu" type="PanelContainer" parent="MainLayout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/TopMenu"]
layout_mode = 2

[node name="OpenPackPanelContainer" type="PanelContainer" parent="MainLayout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="OpenPack" type="Node" parent="MainLayout/OpenPackPanelContainer" node_paths=PackedStringArray("card_pack")]
script = ExtResource("1_hw4gq")
card_pack = NodePath("../VBoxContainer/CardPack")

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/OpenPackPanelContainer"]
layout_mode = 2

[node name="CardPack" type="PanelContainer" parent="MainLayout/OpenPackPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 190)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/CardPack"]
layout_mode = 2
texture = SubResource("AtlasTexture_3s05t")

[node name="Button" type="Button" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/CardPack"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Open"

[node name="PackContainer" type="HBoxContainer" parent="MainLayout/OpenPackPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardEgg" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer" groups=["egg", "salamander"] instance=ExtResource("3_407ca")]
layout_mode = 2
script = ExtResource("4_aetsk")
recipe = null

[node name="RecipeHolder" type="Node" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer/CardEgg"]
script = ExtResource("4_aetsk")
recipe = ExtResource("5_7mihu")

[node name="CardFood" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer" groups=["food", "resources"] instance=ExtResource("3_407ca")]
layout_mode = 2

[node name="TextureRect" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer/CardFood" index="0"]
texture = SubResource("AtlasTexture_e3ipw")

[node name="CardFood2" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer" groups=["resources", "time"] instance=ExtResource("3_407ca")]
layout_mode = 2

[node name="TextureRect" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer/CardFood2" index="0"]
texture = SubResource("AtlasTexture_8ieng")

[node name="CardFood3" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer" groups=["food", "resources"] instance=ExtResource("3_407ca")]
layout_mode = 2

[node name="TextureRect" parent="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer/CardFood3" index="0"]
texture = SubResource("AtlasTexture_e3ipw")

[node name="AcceptCardsButton" type="Button" parent="MainLayout/OpenPackPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add to hand."

[node name="PlayAreaContainer" type="VBoxContainer" parent="MainLayout"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
metadata/_edit_use_anchors_ = true

[node name="SelectedCardsArea" type="PanelContainer" parent="MainLayout/PlayAreaContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainLayout/PlayAreaContainer/SelectedCardsArea"]
layout_mode = 2
size_flags_horizontal = 4
text = "Place your card here."

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/PlayAreaContainer/SelectedCardsArea"]
layout_mode = 2

[node name="SalamanderContainer" type="HBoxContainer" parent="MainLayout/PlayAreaContainer/SelectedCardsArea/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="CenterContainer" type="CenterContainer" parent="MainLayout/PlayAreaContainer/SelectedCardsArea/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainLayout/PlayAreaContainer/SelectedCardsArea/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("6_ywjk5")

[node name="CardsContainer" type="HBoxContainer" parent="MainLayout/PlayAreaContainer/SelectedCardsArea/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="HandsCardsArea" type="PanelContainer" parent="MainLayout/PlayAreaContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainLayout/PlayAreaContainer/HandsCardsArea"]
layout_mode = 2
size_flags_horizontal = 4
text = "Your hand"

[node name="HandContainer" type="HBoxContainer" parent="MainLayout/PlayAreaContainer/HandsCardsArea"]
unique_name_in_owner = true
layout_mode = 2

[node name="FeedButton" type="Button" parent="MainLayout/PlayAreaContainer"]
custom_minimum_size = Vector2(190, 60)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Feed"

[node name="MoveSelectedCards" type="Node" parent="MainLayout/PlayAreaContainer"]
script = ExtResource("7_l5e3b")

[node name="RouteRecipeComponents" type="Node" parent="MainLayout/PlayAreaContainer"]
script = ExtResource("8_psfef")

[node name="CheckRecipe" type="Node" parent="MainLayout/PlayAreaContainer"]
script = ExtResource("9_kghtm")

[node name="Tutorial1" type="Node" parent="."]
script = ExtResource("10_oi6r8")

[connection signal="pressed" from="MainLayout/OpenPackPanelContainer/VBoxContainer/CardPack/Button" to="MainLayout/OpenPackPanelContainer/OpenPack" method="do"]
[connection signal="pressed" from="MainLayout/OpenPackPanelContainer/VBoxContainer/AcceptCardsButton" to="Tutorial1" method="send_to_hand"]
[connection signal="done" from="MainLayout/PlayAreaContainer/MoveSelectedCards" to="MainLayout/PlayAreaContainer/RouteRecipeComponents" method="do"]
[connection signal="available" from="MainLayout/PlayAreaContainer/RouteRecipeComponents" to="MainLayout/PlayAreaContainer/CheckRecipe" method="do"]

[editable path="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer/CardEgg"]
[editable path="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer/CardFood"]
[editable path="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer/CardFood2"]
[editable path="MainLayout/OpenPackPanelContainer/VBoxContainer/PackContainer/CardFood3"]
